// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TvShowPage Component should renders correctly fetching state 1`] = `
<h1>
  Fetching...
</h1>
`;

exports[`TvShowPage Component should renders correctly with empty data 1`] = `
<TvShowPage
  data={
    Object {
      "image": Object {
        "original": "#",
      },
      "name": null,
      "summary": null,
    }
  }
  episodesList={Array []}
  fetchEpisodesList={
    [MockFunction] {
      "calls": Array [
        Array [],
        Array [],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  fetchTvShows={
    [MockFunction] {
      "calls": Array [
        Array [],
        Array [],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  isFetching={false}
>
  <div
    className="container"
  >
    <div
      className="title"
    >
      <h1 />
    </div>
    <div
      className="content"
    >
      <div
        className="coverImage"
      >
        <img
          alt={null}
          src="#"
        />
      </div>
      <div
        className="info"
      >
        <div
          className="description"
        >
          <h3>
            Description
          </h3>
          <span
            dangerouslySetInnerHTML={
              Object {
                "__html": null,
              }
            }
          />
        </div>
        <div
          className="episodesContainer"
        >
          <h3>
            Episodes
          </h3>
          <div
            className="episodesList"
          >
            <Component
              episodesList={Array []}
            >
              Episode list
            </Component>
          </div>
        </div>
      </div>
    </div>
  </div>
</TvShowPage>
`;

exports[`TvShowPage Component should renders correctly with filled data 1`] = `
<div
  className="container"
>
  <div
    className="title"
  >
    <h1>
      Test name
    </h1>
  </div>
  <div
    className="content"
  >
    <div
      className="coverImage"
    >
      <img
        alt="Test name"
        src="url"
      />
    </div>
    <div
      className="info"
    >
      <div
        className="description"
      >
        <h3>
          Description
        </h3>
        <span
          dangerouslySetInnerHTML={
            Object {
              "__html": "Test Summary",
            }
          }
        />
      </div>
      <div
        className="episodesContainer"
      >
        <h3>
          Episodes
        </h3>
        <div
          className="episodesList"
        >
          <Component
            episodesList={
              Array [
                Object {
                  "id": 0,
                  "name": "Test E name 0",
                },
                Object {
                  "id": 1,
                  "name": "Test E name 1",
                },
              ]
            }
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
